msgs: fix long unbroken text overflowing bubble

--- a/marketplace/static/css/my_account/msgs.css
+++ b/marketplace/static/css/my_account/msgs.css
@@ -346,6 +346,8 @@
   color:#111827;
   font-size:14px;
   line-height:1.5;
+  overflow-wrap:break-word;
+  word-break:break-word;
 }
 .msg-time{
   display:block;
